--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,3 +8,11 @@ td .action .btn{
 .ip{
     margin-top: 15px;
 }
+.proxy-list{
+
+}
+.proxy-list .list-group-item{
+    border: none;
+    padding-left: 0;
+    padding-right: 0;
+}
