--- a/nw/css/style.css
+++ b/nw/css/style.css
@@ -1,16 +1,35 @@
+html,body{
+    width: 100%;
+    height: 100%;
+}
+body{
+    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .9);
+    box-shadow: 0 0 20px rgba(0, 0, 0, .9);
+}
+.window{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border: 2px solid #333;
+}
 .topbar{
     color: #fff;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
     z-index: 100;
     height: 30px;
     line-height: 30px;
-    padding: 0 10px;
+    padding: 0 0px 0 10px;
     background-color: #f60;
     -webkit-user-select: none;
     -webkit-app-region: drag;
+}
+.topbar .remove{
+    float: right;
+    cursor: pointer;
+    padding: 3px 10px 0 0;
+    display: block;
+    font-size: 20px;
+    -webkit-app-region: no-drag;
 }
 td .action .btn{
     margin-right: 5px;
@@ -32,16 +51,19 @@ td .action .btn{
 }
 .container{
     width: 100%;
-    height: 100%;
+    position: absolute;
+    top: 30px;
+    right: 0;
+    left: 0;
+    bottom: 0;
     padding: 0;
-    overflow: hidden;
 }
 .sidebar{
     width: 240px;
-    height: 100%;
-    position: fixed;
+    position: absolute;
     left: 0;
-    top: 30px;
+    top: 0;
+    bottom: 0;
     background-color: #ccc;
 }
 .sidebar ul{
@@ -68,9 +90,9 @@ td .action .btn{
     color: #fff;
 }
 .main{
-    position: fixed;
+    position: absolute;
     left: 240px;
-    top: 30px;
+    top: 0;
     right: 0;
     bottom: 0;
     overflow-x: hidden;
