--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,54 @@
+/*td .action .btn{
+    margin-right: 5px;
+}
+.list-group-item .btn{
+    position: relative;
+    top: 6px;
+}
+.ip{
+    margin-top: 15px;
+}
+.list-no-border{
+
+}
+.list-no-border .list-group-item{
+    border: none;
+    padding-left: 0;
+    padding-right: 0;
+}*/
+
+html,body{
+    width: 100%;
+    height: 100%;
+}
+body{
+    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .9);
+    box-shadow: 0 0 20px rgba(0, 0, 0, .9);
+}
+.window{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.topbar{
+    color: #fff;
+    z-index: 100;
+    height: 0px;
+    line-height: 30px;
+    padding: 0 0px 0 10px;
+    background-color: #f60;
+    -webkit-user-select: none;
+    -webkit-app-region: drag;
+}
+.topbar .remove{
+    float: right;
+    cursor: pointer;
+    padding: 3px 10px 0 0;
+    display: block;
+    font-size: 20px;
+    -webkit-app-region: no-drag;
+}
 td .action .btn{
     margin-right: 5px;
 }
@@ -15,4 +66,56 @@ td .action .btn{
     border: none;
     padding-left: 0;
     padding-right: 0;
+}
+.container{
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    padding: 0;
+}
+.sidebar{
+    width: 240px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    background-color: #ccc;
+}
+.sidebar ul{
+    background-color: #2c3e50;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.sidebar ul li{
+    background-color: #34495e;
+    cursor: pointer;
+
+}
+.sidebar ul li a{
+    color: #ddd;
+    display: block;
+    padding: 18px 25px;
+    text-decoration: none;
+}
+.sidebar ul li.active{
+    background-color: transparent;
+}
+.sidebar ul li.active a{
+    color: #fff;
+}
+.main{
+    position: absolute;
+    left: 240px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.tab-content{
+    padding: 5px;
 }
