--- a/views/index.jade
+++ b/views/index.jade
@@ -2,42 +2,63 @@ extends layout
 
 block content
     .container
-        .jumbotron.ip
-            p 当前IP：
-                input#J_ip(readonly, style='border: none; background-color: transparent; outline: none; font-size: 48px;')
-        
-        .well
-            button.btn.btn-primary(id='J_restart', data-loading-text='重启中...') 重启Apache
-        .well
-            h3 DNS管理
-            textarea.form-control(id='J_textarea_dns',rows='10',cols='100')
-            br
-            button.btn.btn-default(id='J_dns_read', data-loading-text='读取中') 读取DNS
-            button.btn.btn-primary(id='J_dns_write') 写入DNS并重启
-        .well
-            h3 host操作
-            textarea.form-control(id='J_host',rows='10',cols='100')
-            br
-            button.btn.btn-default(id='J_read', data-loading-text='读取中') 读取host
-            button.btn.btn-primary(id='J_write') 写入host
-        .row
-            .col-md-12
-                table.table.table-striped.table-bordered
-                    caption 虚拟主机列表
-                    thead
-                        tr
-                            th 域名
-                            th 本地路径
-                            th 操作
-                    tbody#J_vhost_list
-                .well       
-                    button.btn.btn-primary#J_vhost_add 添加一条记录
-        .well
-            h3 vhost源码
-            textarea.form-control(id='J_vhost',rows='10',cols='100')
-            br
-            button.btn.btn-default(id='J_btn_read_vhost', data-loading-text='读取中') 读取vhost
-            button.btn.btn-primary(id='J_btn_write_vhost') 写入vhost
+        aside.sidebar
+            ul#J_side_tab
+                li.active
+                    a(href='#J_tab_home', role='tab', data-toggle='tab')
+                        span.glyphicon.glyphicon-home&nbsp;
+                        | 控制台
+                li
+                    a(href='#J_tab_host', role='tab', data-toggle='tab')
+                        span.glyphicon.glyphicon-list-alt&nbsp;
+                        | HOST
+                li
+                    a(href='#J_tab_vhost', role='tab', data-toggle='tab')
+                        span.glyphicon.glyphicon-send&nbsp;
+                        | 虚拟主机
+                li
+                    a(href='#J_tab_dns', role='tab', data-toggle='tab')
+                        span.glyphicon.glyphicon-retweet&nbsp;
+                        | DNS
+        section.main
+            .tab-content
+                #J_tab_home.tab-pane.active
+                    .ip
+                        p 当前IP：
+                            input#J_ip(readonly, style='border: none; background-color: transparent; outline: none; font-size: 48px;')
+                        p
+                            button.btn.btn-primary(id='J_restart', data-loading-text='重启中...') 重启Apache
+                #J_tab_host.tab-pane
+                    h3 host操作
+                    textarea.form-control(id='J_host',rows='10',cols='100')
+                    br
+                    button.btn.btn-default(id='J_read', data-loading-text='读取中') 读取host
+                    button.btn.btn-primary(id='J_write') 写入host
+                #J_tab_vhost.tab-pane
+                    .row
+                        .col-md-12
+                            table.table.table-striped.table-bordered
+                                caption 虚拟主机列表
+                                thead
+                                    tr
+                                        th 域名
+                                        th 本地路径
+                                        th 操作
+                                tbody#J_vhost_list
+                            .well       
+                                button.btn.btn-primary#J_vhost_add 添加一条记录
+                    div
+                        h3 vhost源码
+                        textarea.form-control(id='J_vhost',rows='10',cols='100')
+                        br
+                        button.btn.btn-default(id='J_btn_read_vhost', data-loading-text='读取中') 读取vhost
+                        button.btn.btn-primary(id='J_btn_write_vhost') 写入vhost
+                #J_tab_dns.tab-pane
+                    h3 DNS管理
+                    textarea.form-control(id='J_textarea_dns',rows='10',cols='100')
+                    br
+                    button.btn.btn-default(id='J_dns_read', data-loading-text='读取中') 读取DNS
+                    button.btn.btn-primary(id='J_dns_write') 写入DNS并重启
     //vhost条目模板
     script(type='x-tmpl-mustache', id='J_tmpl_vhost_item')
         | {{#data}}
