--- a/views/index.jade
+++ b/views/index.jade
@@ -21,16 +21,15 @@ block content
                         span.glyphicon.glyphicon-retweet&nbsp;
                         | DNS
             .quick-action
-                button(type="button", id='J_restart', data-loading-text='重启中...').btn.btn-primary 重启Apache
                 //button(type="button", data-toggle='tooltip', data-placement='bottom', title='检查Apache配置', id='J_apache_check', data-loading-text='检查中...').btn.btn-default 检查Apache
+                input#J_ip(readonly, style='border: none; background-color: transparent; outline: none; font-size: 36px;')
+                button(type="button", id='J_restart', data-loading-text='重启中...').btn.btn-primary 重启Apache
         section.main
             .tab-content
                 #J_tab_home.tab-pane.active
-                    .ip
-                        p 本机IP：
-                        input#J_ip(readonly, style='border: none; background-color: transparent; outline: none; font-size: 48px;')
-                        //p
-                            button.btn.btn-primary(id='J_restart', data-loading-text='重启中...') 重启Apache
+                    h3 使用帮助
+                    ul
+                        li 点击ip地址可选择
                 #J_tab_host.tab-pane
                     h3 host操作
                     textarea.form-control(id='J_host',rows='20',cols='100')
