--- a/views/index.jade
+++ b/views/index.jade
@@ -29,7 +29,7 @@ block content
                 #J_tab_home.tab-pane.active
                     h3 使用帮助
                     ul
-                        li 点击ip地址可选择
+                        li 点击ip地址可选择...
                 #J_tab_host.tab-pane
                     h3 host操作
                     textarea.form-control(id='J_host',rows='20',cols='100')
