--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,10 +4,12 @@ html
         title= title
         link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
         //link(rel='stylesheet', href='/bootstrap/css/bootstrap-theme.min.css')
+        link(rel='stylesheet', href='/css/bootstrap-dialog.min.css')
         link(rel='stylesheet', href='/css/style.css')
     body
         block content
 
         script(src='/js/jquery.min.js')
         script(src='/bootstrap/js/bootstrap.min.js')
+        script(src='/js/bootstrap-dialog.min.js')
         block footer-js
