--- a/views/index.jade
+++ b/views/index.jade
@@ -22,7 +22,7 @@ block content
                         | DNS
             .quick-action
                 //button(type="button", data-toggle='tooltip', data-placement='bottom', title='检查Apache配置', id='J_apache_check', data-loading-text='检查中...').btn.btn-default 检查Apache
-                input#J_ip(readonly, style='border: none; background-color: transparent; outline: none; font-size: 36px;')
+                input#J_ip(readonly, style='border: none; background-color: transparent; outline: none; font-size: 2em;')
                 button(type="button", id='J_restart', data-loading-text='重启中...').btn.btn-primary 重启Apache
         section.main
             .tab-content
