--- a/nw/css/style.css
+++ b/nw/css/style.css
@@ -1,3 +1,22 @@
+/*td .action .btn{
+    margin-right: 5px;
+}
+.list-group-item .btn{
+    position: relative;
+    top: 6px;
+}
+.ip{
+    margin-top: 15px;
+}
+.list-no-border{
+
+}
+.list-no-border .list-group-item{
+    border: none;
+    padding-left: 0;
+    padding-right: 0;
+}*/
+
 html,body{
     width: 100%;
     height: 100%;
@@ -87,6 +106,9 @@ td .action .btn{
 }
 .sidebar ul li.active a{
     color: #fff;
+}
+.quick-action{
+    padding: 10px;
 }
 .main{
     position: absolute;
