启用/禁用本地代理

--- a/views/index.jade
+++ b/views/index.jade
@@ -68,8 +68,8 @@ block content
                 #J_tab_proxy.tab-pane
                     h3 代理
                     label
-                        input(type='checkbox')  
-                        | 开启https代理
+                        input.i-switch#J_proxy_control(type='checkbox')  
+                        
                     
     //vhost条目模板
     script(type='x-tmpl-mustache', id='J_tmpl_vhost_item')
