--- a/public/src/main.scss
+++ b/public/src/main.scss
@@ -1,3 +1,10 @@
+html {
+    font-size: 62.5%;
+}
 body{
-	background-color: #efefef;
+	background-color: #fff;
+    * {
+        -webkit-tap-highlight-color: rgba(255,255,255,0);
+        outline: none;
+    }
 }
